Almost Completed it fixed some issues

--- a/BST/index.html
+++ b/BST/index.html
@@ -3,19 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
     <title>BST Visualizer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <img src="./Untitled-removebg-preview.png" alt="Binary_tree_logo">
-        <h1>Binary Search Tree Visualizer</h1>
-    </nav>
+    <header>
+        <nav>
+            <img src="./Untitled-removebg-preview.png" alt="Binary_tree_logo">
+            <h1>Binary Search Tree Visualizer</h1>
+        </nav>   
+        <div role="alert" id="errorMsg" class="alert">
+            <p id="errMessage"></p>
+            <button type="button" onclick="errorContainer.style.display = 'none'" class="close"><span aria-hidden="true">&#10060</span>
+            </button>
+        </div>
+    </header>
     <main id="container">
         <section id="inputSection">
+            <div class="intro">
+                    <p>Binary Search Tree</p>
+            </div>
             <div class="input_div">
-                <input id="input_nos" type="text">
-                <button id="btn" onclick="mainFunc()">Insert</button>
+                <label>Enter Numbers Here:
+                <input id="input_nos" type="text" placeholder="1 2 3 4 5">
+                </label>
+                <button onclick="makeTree()" id="btn">Insert</button>
+                <div>
+                    <button onclick="preOrder()" class="traversal_btn" id="preorder">Preorder</button>
+                    <button onclick="inOrder()" class="traversal_btn" id="inorder">Inorder</button>
+                    <button onclick="postOrder()" class="traversal_btn" id="postorder">Postorder</button>
+                </div>
+                <div class="traversals" id="traversals">
+                    <span id="whichTraversal"></span>
+                    <span id="tarversalValues"></span>
+
+                </div>
             </div>
         </section>
         <section id="treeSection">
@@ -25,5 +50,5 @@
         </section>
     </main>
 </body>
-<script src="app.js"></script>
+<script src="bst.js"></script>
 </html>
