made neccessary changes

--- a/STACK/index.html
+++ b/STACK/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Stack Visualization</title>
+    <title>Data Structure Visualizater</title>
 </head>
 
 <body>
